--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
     "bootstrap": "^5.3.3",
+    "ngx-owl-carousel-o": "^19.0.0",
     "ngx-sonner": "^3.0.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.17.2",
